# nexus-tui

./: .env.example  CARGO_DIST_RELEASES.md  COMMERCIAL_LICENSE.md  Cargo.toml  INSTALL.md  LICENSE  PUBLISHING.md  README.md  install.ps1  install.sh  test_mpv.sh  uninstall.ps1  uninstall.sh
.github/workflows/: dispatch-homebrew-tap.yml  homebrew-bottle-and-dispatch.yml  publish-crate.yml  release.yml  rust.yml
examples/: test_play.rs
scripts/: create_homebrew_linux_bottle.sh
src/: app.rs  browser_auth.rs  config.rs  debug_log.rs  flaresolverr.rs  main.rs  player.rs
src/api/: allanime.rs  anilist.rs  mangadex.rs  mod.rs  tmdb.rs
src/db/: history.rs
src/ui/: detail.rs  history.rs  image.rs  mod.rs  search.rs  settings.rs
