[package]
name = "nexus-tui"
version = "0.1.0"
edition = "2021"
authors = ["you"]
description = "A blazing-fast TUI for Anime, Movies, TV & Manga — website feel, terminal speed"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# TUI
ratatui          = "0.29"
crossterm        = "0.28"
ratatui-image    = { version = "6", features = ["crossterm"] }

# Async
tokio            = { version = "1", features = ["full"] }

# HTTP
reqwest          = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Image decoding
image            = "0.25"

# Embedded DB
sled             = "0.34"

# Error handling
anyhow           = "1"
thiserror        = "1"

# Utilities
urlencoding      = "2"
chrono           = { version = "0.4", features = ["serde"] }
open             = "5"
directories      = "5"
once_cell        = "1"
strum            = { version = "0.26", features = ["derive"] }
toml             = "0.8"

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
strip           = true
