[package]
name = "ani-nexus-tui"
version = "0.1.3"
edition = "2021"
authors = ["OsamuDazai666"]
description = "A blazing-fast TUI for Anime — website feel, terminal speed"
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
repository = "https://github.com/OsamuDazai666/ani-nexus-tui"
categories = ["command-line-utilities", "multimedia::video"]
keywords = ["anime", "tui", "terminal", "cli"]
exclude = [
    "assets/*",
    ".github/*",
    "install.sh",
    "install.ps1",
    "uninstall.sh",
    "uninstall.ps1"
]

[[bin]]
name = "ani-nexus"
path = "src/main.rs"

[dependencies]
# TUI
ratatui          = "0.29"
crossterm        = "0.28"
ratatui-image    = { version = "6", features = ["crossterm"] }

# Async
tokio            = { version = "1", features = ["full"] }

# HTTP
reqwest          = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Image decoding
image            = "0.25"

# Embedded DB
rusqlite         = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow           = "1"
thiserror        = "1"

# Utilities
urlencoding      = "2"
chrono           = { version = "0.4", features = ["serde"] }
directories      = "5"
strum            = { version = "0.26", features = ["derive"] }
toml             = "0.8"

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
strip           = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
